# cmake-for-all

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cc
include/: shape.h
lib/: CMakeLists.txt  shape.cc
tests/: CMakeLists.txt  shape_test.cc
